<resources>
    <string name="app_name">Campus Virtual UCR</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGVzczk2IiwiYSI6ImNrOWxyN3VzcjI4bTgzaHF0d3ptOWl1ZGsifQ.hl5dGpcrahvriXJRBuFxiA</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <!-- Maps required strings -->
    <string name="MAPBOX_ACCESS_TOKEN">sk.eyJ1IjoiZGlhbmFhcmlhcyIsImEiOiJja2FsZ3Y2emcxMWpkMnJzMHlpNmZ4eTAyIn0.J5UYy80Mn5aUpqH8iaQvDQ</string>
    <string name="goTo">Go to in maps</string>
    <string name="placeNameKey">Lugar:</string>
    <string name="placeNameValue">Escuela Default</string>

    <string name="placeDescriptionKey">Descripción:</string>
    <string name="placeDescriptionValue"> Descripció de la Escuela Default</string>

    <string name="placeScheduleKey">Horario:</string>
    <string name="placeScheduleValue">7:00 am - 7:00 pm</string>

    <string name="placeNumberKey">Teléfono:</string>
    <string name="placeNumberValue">2222 3333</string>
    <string name="ucrMapDetails">Detalles</string>
    <!-- End of Maps required strings -->
    <string name="buscar">Buscar soda...</string>

    <!-- Texto para diálogo de alerta de confirmación para compartir ruta (Mujeres) -->
    <string name="pregunta_compartir_ruta">Desea compartir su ruta con su grupo de personas confiables?</string>
    <string name="afirmativo_compartir_ruta">Sí</string>
    <string name="negativo_compartir_ruta">No</string>

    <!--Marker strings for DirectionsActivity activity-->
    <string name="directions_activity_toast_message">La ruta es de %1$f metros.</string>

    <!--Interest Points-->
    <string name="Comentarios">Comentarios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="meal">Meal</string>
    <string name="price_placeholder">1000</string>
    <string name="image">image</string>
    <string name="restaurant_placeholder">Restaurant</string>
    <string name="meals_left_placeholder">Restantes: %1$d de %2$d</string>
    <string name="capacity_left_placeholder">Capacidad: %1$d de %2$d</string>
    <string name="servings_placeholder">Porciones: %1$d de %2$d</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Configuración</string>
</resources>
