<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/meal_picture"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:background="@drawable/soda_placeholder"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/meal_name"
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center|left"
                android:maxLines="2"
                android:paddingLeft="5dp"
                android:text="@string/meal"
                android:textColor="@color/black"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageView
                android:id="@+id/meal_currency_img"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/image"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/foro_becas" />

            <TextView
                android:id="@+id/meal_price"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price_placeholder"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/meals_left_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meals_left_placeholder"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>